--- a/main.org
+++ b/main.org
@@ -1088,17 +1088,12 @@ alias em="emacsclient -c -a emacs"
     :custom
     (google-translate-backend-method 'curl)
     :config
-;      (use-package google-translate-default-ui
-;      :ensure t
-;      :config
-    ;;https://github.com/atykhonov/google-translate/issues/52#issuecomment-727920888
-    (defun google-translate--search-tkk () "Search TKK." (list 430675 2721866130)))
+    ;; https://github.com/atykhonov/google-translate/issues/52#issuecomment-727920888
+    (defun google-translate--search-tkk () "Search TKK." (list 430675 2721866130))
     (define-key evil-normal-state-map (kbd "<SPC> l l") 'google-translate-at-point)
     (define-key evil-normal-state-map (kbd "<SPC> l L") 'google-translate-at-point-reverse)
-
     (define-key evil-normal-state-map (kbd "<SPC> L l") 'google-translate-query-translate)
     (define-key evil-normal-state-map (kbd "<SPC> L L") 'google-translate-query-translate-reverse)
-
     (setq google-translate-default-source-language "en")
     (setq google-translate-default-target-language "ru"))
 #+END_SRC
@@ -1118,26 +1113,22 @@ alias em="emacsclient -c -a emacs"
 
 * Tramp
 #+BEGIN_SRC emacs-lisp :results output silent
-    (use-package zoom
-      :ensure t
-      :custom
-      (zoom-mode t)
-      :config
-      (defun size-callback ()
-      (cond ((> (frame-pixel-width) 1280) '(90 . 0.75))
-              (t                            '(0.5 . 0.5))))
-
-      (custom-set-variables '(zoom-size 'size-callback)))
+(use-package zoom
+  :ensure t
+  :custom
+  (zoom-mode t)
+  :config
+  (defun dy-size-callback ()
+    (cond ((> (frame-pixel-width) 1280) '(90 . 0.75))
+          (t                            '(0.5 . 0.5))))
+  (custom-set-variables '(zoom-size 'size-callback)))
 #+END_SRC
 
 * Lilypond
 #+BEGIN_SRC emacs-lisp :results output silent
 (setq load-path (append (list (expand-file-name "lilypond" init-dir)) load-path))
-  (autoload 'LilyPond-mode "lilypond-mode" "LilyPond Editing Mode" t)
-  (add-to-list 'auto-mode-alist '("\\.ly$" . LilyPond-mode))
-  (add-to-list 'auto-mode-alist '("\\.ily$" . LilyPond-mode))
-  (add-hook 'LilyPond-mode-hook (lambda () (turn-on-font-lock)))
+(autoload 'LilyPond-mode "lilypond-mode" "LilyPond Editing Mode" t)
+(add-to-list 'auto-mode-alist '("\\.ly$" . LilyPond-mode))
+(add-to-list 'auto-mode-alist '("\\.ily$" . LilyPond-mode))
+(add-hook 'LilyPond-mode-hook (lambda () (turn-on-font-lock)))
 #+END_SRC
-
-
-привет
